# ohlcv-hub

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/internal/: README.md  process.md
docs/internal/changes/: 2026-02-20-alpaca-client-contract.md  2026-02-20-bootstrap.md  2026-02-20-debug-logging.md  2026-02-20-feed-option.md  2026-02-20-fetch-1d.md  2026-02-20-fetch-1w.md  2026-02-20-proactive-rate-limit.md  2026-02-20-retry-429.md  2026-02-20-security-ci-publish.md  2026-02-21-filelock-pin.md  2026-02-21-py39-calendar-fix.md  2026-02-21-py39-compat-round2.md  2026-02-21-py39-compat.md  2026-02-21-repo-cleanup.md  2026-02-21-test-caplog-fix.md
docs/internal/llm-handoff/: alpaca-market-data-bars.md  current-state-2026-02-20.md  feature3-plan-2026-02-20.md  feature4-weekly-plan-2026-02-20.md  feature5a-feed-option-plan-2026-02-20.md  feature5b-retry-429-plan-2026-02-20.md  feature5c-proactive-throttle-plan-2026-02-20.md  feature5d-debug-logging-plan-2026-02-20.md  mvp-tech-choices.md  py39-calendar-fix-plan-2026-02-21.md  py39-union-fix-plan-2026-02-21.md  py39-union-fix-round2-2026-02-21.md  release-security-plan-2026-02-20.md  (+2 more)
ohlcv_hub/: __init__.py  __main__.py  cli.py  config.py  dataset.py  errors.py  export.py  normalize.py  resample.py  types.py  validate.py
ohlcv_hub/providers/: __init__.py  alpaca.py
tests/: __init__.py  test_alpaca_client_pagination.py  test_cli_doctor.py  test_cli_fetch_parsing.py  test_fetch_1d_integration_mocked.py  test_fetch_1w_integration_mocked.py
